# wing_ding

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
src/: globals.h  main.cpp  wing_ding.cpp  wing_ding.h
src/game/: game.cpp  game.h  state_manager.cpp  state_manager.h
src/graphics/: batch_renderer.cpp  batch_renderer.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h  texture.cpp  texture.h
src/utils/: image_loader.cpp  image_loader.h
